--- a/free-wifi-android/res/values/strings.xml
+++ b/free-wifi-android/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">FreeWifi</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="signal_image_description">Signal</string>
+    <string name="connect_button">Connect</string>
 
 </resources>
