--- a/free-wifi-android/res/values/strings.xml
+++ b/free-wifi-android/res/values/strings.xml
@@ -6,5 +6,8 @@
     <string name="action_settings">Settings</string>
     <string name="signal_image_description">Signal</string>
     <string name="connect_button">Connect</string>
+    <string name ="Password">Password</string>
+    <string name="share">Share Password</string>
+    <string name="forget">Forget WiFi</string>
 
 </resources>
