[android] fix layout when no item was choosen

--- a/free-wifi-android/res/values/strings.xml
+++ b/free-wifi-android/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name ="Password">Password</string>
     <string name="share">Share Password</string>
     <string name="forget">Forget WiFi</string>
+    <string name="choose_wifi">Choose a WiFi</string>
 
 </resources>
