--- a/free-wifi-android/res/values/strings.xml
+++ b/free-wifi-android/res/values/strings.xml
@@ -3,12 +3,15 @@
 
     <string name="app_name">FreeWifi</string>
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="about">About</string>
+    <string name="description">Description</string>
     <string name="signal_image_description">Signal</string>
     <string name="connect_button">Connect</string>
     <string name ="Password">Password</string>
     <string name="share">Share Password</string>
     <string name="forget">Forget WiFi</string>
     <string name="choose_wifi">Choose a WiFi</string>
+    <string name="status_text">Status</string>
+    <string name="wifi_name">WiFi Name</string>
 
 </resources>
